--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.31",
-    "@types/mongoose": "^5.11.97"
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4"
   },
   "dependencies": {
     "express": "^4.18.1",
-    "typescript": "^4.6.4",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "typescript": "^4.6.4"
   }
 }
