--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
+    "pino": "^8.1.0",
     "typescript": "^4.6.4"
   }
 }
