feat(doc): openapi doc

--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 PORT = 8000
 DB_URL = 'sqlite:///:memory:'
 
+
 SECRET_TOKEN = 'secret'
+
+BASE_URL = "http://localhost:8000"
+post_id=1 
+user_id=1 
+subreddit_id=1
+comment_id=1
