--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ DB_URL = 'sqlite:///:memory:'
 SECRET_TOKEN = 'secret'
 
 BASE_URL = "http://localhost:8000"
-post_id=1 
-user_id=1 
-subreddit_id=1
-comment_id=1
+
+
+API_SECRET=''
+API_KEY=''
+CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
