--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.4"
   },
   "dependencies": {
+    "cloudinary": "^1.30.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
     "pino": "^8.1.0",
